# LinuxLearning

./: README.md  Readme
01 Bai 1/: Baitap.txt
01 Bai 1/Exercise 1/: helloworld.c
01 Bai 1/Exercise 4/: Mycat.c
02 File System/BT3/: Problem.txt  main.c  test.txt
03 Process/BT5/: Problem.txt  main.c
03 Process/BT6.1/: main.c
03 Process/BT6.2/: Problem.txt  main.c
03 Process/BT7/: Problem.txt
04 Signal/BT8 + 9/: Problem.txt
05 Multi-Thread/BT12/: Problem.txt
06 Socket/BT13/: main_server.c
07 Pipe and FIFO/BT14 Pipe/: Problem.txt  main.c  makefile
07 Pipe and FIFO/BT15 FIFO/: main_ProcessA.c
10 KernelModule/2_device_file/: hello.c
10 KernelModule/3_file_operation/: hello.c
10 KernelModule/4_file_rw/: main.c
11 GPIO/GPIO_NativeCompile/: README.txt  hello.c
11 GPIO/GPIO_WriteOperation/: Problem.txt  gpio.c
11 GPIO/Legacy/: Makefile  Problem.txt
11 GPIO/Subsystem/: gpio.c
12 Device_Tree/GPIO_Overlay/: app.c
12 Device_Tree/General_DeviceTree/: testoverlay.dts
13 PWM/: README.md  pwmDriver.c
14 Interrupt/Interrupt_Legacy/: README.md
15 Sysfs/: README.md  Sysfs.c  test.c
16 Built_in_Driver/: BuiltInDriver.dts  Kconfig  Makefile
17 Misc_Device/GPIO_Misc_driver/: GPIOMiscDevice.dts  Makefile
17 Misc_Device/Simple_Misc_driver/: MiscDevice.c
18 Nokia5110/: Nokia5110.dts
19 SSD1306/: Makefile  README.md
20 QT/: README.md
20 QT/01_Getting_started/: .gitignore  CMakeLists.txt  main.qml
20 QT/02_QML_Syntax/: CMakeLists.txt  main.qml
20 QT/03_Exploring_Data_Type/: CMakeLists.txt  main.qml
20 QT/04_Property_Binding/: CMakeLists.txt  main.qml
20 QT/05_QT_Global_Object/: CMakeLists.txt  main.qml
20 QT/06_Rectangle_Item_Text/: CMakeLists.txt  main.qml
20 QT/07_Image/: CMakeLists.txt  main.qml  qml.qrc  resource.qrc
20 QT/08_CustomComponent/: CMakeLists.txt  README.md  main.qml
20 QT/09_Custom_Component_In_Main/: CMakeLists.txt  CMakeLists.txt.user.7db4d3f  README.md  main.qml  qml.qrc
20 QT/10_QML_Module/: CMakeLists.txt  CMakeLists.txt.user.7db4d3f  README.md  main.qml
20 QT/10_Signal_Handler/: CMakeLists.txt
20 QT/11_Signal_Handler/: main.qml
20 QT/11_Signal_Parameter/: CMakeLists.txt  main.qml
20 QT/12_Property_Change_Signal/: CMakeLists.txt
20 QT/13_Property_Change_Signal/: main.qml
20 QT/14_Attached_Signal_Handler/: CMakeLists.txt  main.qml
20 QT/14_Connection/: CMakeLists.txt  main.qml
20 QT/16_Custom_Signal/: CMakeLists.txt  main.qml
20 QT/17_Connect_Signal_To_Method/: CMakeLists.txt  main.qml
20 QT/18_Connect_Signal_To_Signal/: CMakeLists.txt  main.qml
20 QT/19_Send_Signal_To_Components/: CMakeLists.txt  Notifier.qml  Receiver.qml  main.qml
20 QT/20_Multi_Signal_Parameters/: CMakeLists.txt  main.qml
20 QT/21_Text_Input/: CMakeLists.txt  main.qml
20 QT/22_Text_Input_Advanced/: CMakeLists.txt  LabeledTextInput.qml  main.qml
20 QT/23_TextEdit/: CMakeLists.txt  main.qml
20 QT/24_MouseArea/: CMakeLists.txt  main.qml
20 QT/25_Key_Attach/: CMakeLists.txt  main.qml
20 QT/26_Navigation/: CMakeLists.txt  main.qml
20 QT/27_Java_Import/: CMakeLists.txt  Test_import.js  main.qml  qml.qrc
20 QT/28_Javascript_Module/: CMakeLists.txt  main.qml  qml.qrc  test_java.mjs
20 QT/29_Anchors/: CMakeLists.txt  main.qml
20 QT/30_Anchor_Margin_And_Offset/: CMakeLists.txt  main.qml
20 QT/31_Layout/: CMakeLists.txt  main.qml
20 QT/32_Button/: CMakeLists.txt  main.cpp  main.qml
20 QT/33_BusyIndicator/: CMakeLists.txt  main.qml
20 QT/34_CheckBox/: CMakeLists.txt  main.cpp  main.qml
20 QT/35_ComboBox/: CMakeLists.txt  main.qml
20 QT/36_DelayButton/: CMakeLists.txt  main.cpp  main.qml
20 QT/37_Dial/: CMakeLists.txt  main.cpp  main.qml
20 QT/38_Swipe_And_PageIndicator/: CMakeLists.txt  main.qml  qml.qrc
20 QT/Demo_Dynamic_Beagle_Bone_Black/: CMakeLists.txt  main.qml
20 QT/Hello_Beagle_Bone/: CMakeLists.txt  main.qml
Bai 1/Exercise 1/: helloworld
Bai 1/Exercise 2/: main  main.c
Bai 1/Exercise 3/: main  main.c
Bai 1/Exercise 5/: main  main.c
Boot Process/: 1. Booting Process.txt  2. 1st stage.txt  3. 2nd stage.txt  4. 3rd stage.txt  Decoding U-boot Header  Practice 1.txt  Practice 2.txt  README.md  U-boot.txt  eMMC update
Device_Tree/GPIO_DeviceTree/: .dt_gpio.o.d  Makefile  (+3 more)
HelloWorld with make/: main.c
Mock 1/: database.db  main_client  main_client.c  main_server  main_server.c  makefile  readme.txt
Mock 1 Server-Clients/: main_client.c  makefile
Mock 2 Display/: ILI9341.h  ILI9341_GUI.c  README.md
Mock 2 QT/: QT.cpp  README.md  codeArduino.c
OpenBoard/: BeagleBoneOpenBoard.OutJob  BeagleBoneOpenBoard.PrjPcb  PCB.PcbDoc  PCB.PcbDoc.htm  PCB.html  PCB.txt  Panel.PcbDoc  Project Outputs for BeagleBoneOpenBoard.rar  Schematic.SchDoc
XIII_I2C_BPM180/: Makefile  Problem.txt  app.c  bmp180.c  i2c.c
XII_PWM/: .pwmDriver.ko.cmd  .pwmDriver.mod.cmd  .pwmDriver.mod.o.cmd  .pwmDriver.o.cmd  Makefile  PWM_Overlay.c  PWM_Overlay.dts  README.md  modules.order  pwmDriver.c  pwmDriver.ko  pwmDriver.mod  pwmDriver.mod.c  test.c
XIV_Sysfs/: Makefile  README.md  Sysfs.c  test.c
XVIII_SSD1306/: Makefile  README.md  SSD1306.dtbo  SSD1306.dts  SSD1306_Driver.c  am335x-boneblack.dts  test_app.c
XVII_Nokia5110/: Makefile  Nokia5110.c  Nokia5110.dts  README.md
XVII_SPI/: README.md
XV_Built_in_Driver/: BuiltInDriver.c  BuiltInDriver.dts  README.md
XX_MOCK2/: ILI9341.c  ILI9341.dts  ILI9341.h  ILI9341_DT.dts  ILI9341_GUI.c  ILI9341_GUI.h  ILI9341_ctrl.c  Makefile  README.md  gen.c++  read.c  test.c  test.cpp
Yocto/: Element  What is yocto
(+204 files in other folders)
